syntax = "proto3";
package pbobject;

import "github.com/aperturerobotics/objectenc/objectenc.proto";
import "github.com/aperturerobotics/objectsig/objectsig.proto";

// ObjectWrapper wraps and stores an object.
message ObjectWrapper {
  // ObjectTypeCrc is the crc32 of the object type ID.
  uint32 object_type_crc = 1;
  // EncBlob is the inner data of the object.
  objectenc.EncryptedBlob enc_blob = 3;
  // Signatures contains the set of signatures attached to this object.
  // The data signed is the unencrypted object data.
  repeated objectsig.Signature signatures = 4;
}

// ObjectTypeID is an identifier for a type, hashed to get the object type crc.
message ObjectTypeID {
  // TypeUuid is the type unique identifier.
  string type_uuid = 1;
}
